[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/Particles/PlayerParry.png" type="Texture" id=1]
[ext_resource path="res://Sound/PlayerParry.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/Attack/Attack.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[sub_resource type="Animation" id=5]
resource_name = "Parry"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.329877, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.07, 0.07 ), Vector2( 0.065, 0.065 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.329877, 1, 1 ),
"update": 0,
"values": [ 24.0, 32.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Attack" type="Area2D" groups=["attack"]]
collision_layer = 8
collision_mask = 64
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = -1.57079
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = -3.14159
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = 1.5708
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite5" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = 0.785406
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite6" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = -0.785388
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite7" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = -2.35618
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="Sprite8" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
rotation = 2.35621
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 350, 0 )

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ParrySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Parry = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Attack_area_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
